<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/baseline_list_black_24"
        android:title="@string/title_daily"
        />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/baseline_view_quilt_black_24"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/baseline_headset_mic_black_24"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_black_24"
        android:title="@string/title_profile" />

</menu>
